MFB: Fix bug #36656 (http_build_query generates invalid URIs due to use of square brackets)